--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://semogong.s3.ap-northeast-2.amazonaws.com/my_plot.png" height="900" width="1700">
+    <img src="https://semogong.s3.ap-northeast-2.amazonaws.com/my_plot1.png" height="900" width="1700">
+
+    <br>
+    
+    <img src="https://semogong.s3.ap-northeast-2.amazonaws.com/my_plot2.png" height="900" width="1700">
 </body>
 </html>
